fix: headar layout shift

--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
 }
 
 body {
+  padding-top: 82px;
   font-family: "Poppins", sans-serif;
   background-color: #f5f3f3;
 }
